[package]
name = "qjsonrpc_daemon"
version = "0.0.1"
authors = ["Scorch-Dev <scorchdev@gmail.com>"]
description = "Daemon Server Process for JSON-RPC over QUIC comm"
license = "MIT OR BSD-3-Clause"
repository = "https://github.com/maidsafe/sn_api"
keywords = ["quic"]
edition = "2018"

[lib]
name="qjsonrpc_daemon"
path="src/lib.rs"

[[example]]
name="async_ping"

[dependencies]
futures = "~0.3.5"
log = "~0.4.8"
qjsonrpc = { path = "../qjsonrpc" }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
tokio = { version="~0.2.21", features=["rt-core", "macros", "sync"]}
url = "2.1.1"

[dev-dependencies]
tempfile = "3"